maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: value &&
				if (!aMurNord(x,y)) && (!aMurOuest(x,y)) && (y != getMondeLargeur-1) && (!aMurNord(x,y+1)) && (x != getMondeHauteur-1) && (!aMurOuest(x+1,y))
                                                    ^